Fix image overflow with certain feeds
Images or illustrations in some RSS feeds did not respect the max-width:
CSS property set in Vienna styles. Ex: https://blog.substack.com/feed

Github issue #1428
Cherry pick of f5189515ea3b789f5fda57447c052aae2e8854a3

--- a/Vienna/SharedSupport/Styles/Serifim.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Serifim.viennastyle/stylesheet.css
@@ -165,7 +165,7 @@ code, pre,
 textarea, input,
 iframe, object,
 embed, video {
-  max-width: 100%;
+  max-width: 100% !important;
 }
 
 /* specific direction for code */
